<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_main_drawer_layout"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.gacon.julien.go4lunch.controller.activities.ProfileActivity"
    tools:openDrawer="start">

    <!-- Profile activity root view -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:titleTextColor="@android:color/white" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- FrameLayout for our fragments -->
            <FrameLayout
                android:id="@+id/activity_main_frame_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

    </LinearLayout>

    <!-- Bottom navigation -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="bottom|center">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/profile_main_bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/icon_background_color"
            app:itemIconTint="@drawable/bottom_navigation_colors"
            app:itemTextColor="@drawable/bottom_navigation_colors"
            app:menu="@menu/bottom_navigation_menu" />
    </LinearLayout>

    <!-- NavigationView / !Must be at the end of the layout -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/profile_main_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimaryLight"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/profile_nav_header"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:menu="@menu/profile_main_menu_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>